# Samurai_Codes

./: .gitignore
Relaxation_BN_hierarchy/: CMakeLists.txt  eos.hpp  flux.hpp  flux_6eqs.hpp  flux_6eqs_int_energy.hpp  main.cpp  plot_results.py  plot_results_comparison.py  plot_results_comparison_flux.py  plot_results_comparison_flux_BN.py  plot_results_comparison_relax.py  relaxation.hpp  relaxation_6eqs.hpp  relaxation_6eqs_int_energy.hpp
Relaxation_finite/: BN_solver.hpp  CMakeLists.txt  Rusanov.hpp  eos.hpp  flux.hpp  main.cpp  relaxation.hpp
Relaxation_finite/include/: Riemannsol.hpp  eos.hpp  etat.hpp  flux_numeriques.hpp
Scalar_Advection/: CMakeLists.txt  flux.hpp  main.cpp  scalar_advection.hpp
Static_Bubble/: CMakeLists.txt  main.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp
TwoScale/: CMakeLists.txt  barotropic_eos.hpp  main.cpp  two_scale.hpp  two_scale_FV.hpp
TwoScale_Capillarity/: two_scale_capillarity.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp
TwoScale_Capillarity_NoMassTransfer/: CMakeLists.txt  two_scale_capillarity.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp  two_scale_capillarity_FV_order1.hpp  two_scale_capillarity_FV_order2.hpp  two_scale_capillarity_order1.hpp  two_scale_capillarity_order2.hpp
Waves_Interface/: CMakeLists.txt  barotropic_eos.hpp  main.cpp  plot_results.py  waves_interface.hpp  waves_interface_FV.hpp
